test/tests/InterfaceConstruct.expected
InterfaceConstruct.frost:5:14: error: 'anonymous.Fail' is an interface and may not be directly constructed
1 error
