test/tests/InterfaceConstruct.frost
interface Fail {
}

method main() {
    def f := Fail()
}
